resolved two layout issues

--- a/frontend/src/components/Landing/Post/index.css
+++ b/frontend/src/components/Landing/Post/index.css
@@ -1803,3 +1803,13 @@ non-act {
     margin-top: 0px;
   }
 }
+
+.cmts-count{
+ gap:10px;
+ }
+ @media (min-width: 285px) and (max-width: 364px) {
+  .cmts-count{
+    gap:10px;
+    margin-right: 15px;
+  }
+ }
